RESOLVED FIXED257605
[css-overflow] Fix scrollbar-gutter stable in vertical writing modes
https://bugs.webkit.org/show_bug.cgi?id=257605
Summary [css-overflow] Fix scrollbar-gutter stable in vertical writing modes
Luke Warlow
Reported 2023-06-01 09:02:17 PDT
Fix scrollbar-gutter stable in vertical writing modes. Currently it only works in horizontal writing modes. This will only apply to non-viewport scrollables. Viewport scrollbar-gutter implementation will be implemented as a follow up.
Attachments
Luke Warlow
Comment 1 2023-06-01 12:37:14 PDT
EWS
Comment 2 2023-06-07 05:49:13 PDT
Committed 264937@main (0f6bd1d18640): <https://commits.webkit.org/264937@main> Reviewed commits have been landed. Closing PR #14598 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-07 05:50:17 PDT
Note You need to log in before you can comment on or make changes to this bug.