Fix scrollbar-gutter stable in vertical writing modes https://bugs.webkit.org/show_bug.cgi?id=257605

Reviewed by Simon Fraser.

Stable scrollbar gutters on non-viewports now correctly account for vertical writing modes.

* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollbar-gutter-vertical-lr-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/scrollbar-gutter-vertical-rl-001-expected.txt:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::includeHorizontalScrollbarSize const):
(WebCore::RenderBox::verticalScrollbarWidth const):
(WebCore::RenderBox::horizontalScrollbarHeight const):
(WebCore::RenderBox::overflowClipRect const):
* Source/WebCore/rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::constrainingRectForStickyPosition const):
* Source/WebCore/rendering/RenderLayerScrollableArea.cpp:
(WebCore::RenderLayerScrollableArea::verticalScrollbarWidth const):
(WebCore::RenderLayerScrollableArea::horizontalScrollbarHeight const):
(WebCore::RenderLayerScrollableArea::computeScrollOrigin):
* Source/WebCore/rendering/RenderLayerScrollableArea.h:

Canonical link: https://commits.webkit.org/264937@main